--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,14 @@
 // Colors
+$dark-grey: #333333;
+$grey: #666;
+$blue: #1c88bf;
+$dark-blue: #364051;
+$off-white: #f7f7f7;
 // Spacing
+$font-size-large: 1.8rem;
+$font-size-medium: 1.6rem;
+$font-size-small: 1.4rem;
+
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
