added facebook login

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,6 +4,14 @@ $grey: #666;
 $blue: #1c88bf;
 $dark-blue: #364051;
 $off-white: #f7f7f7;
+
+$off-black: #20222b;
+$dark-blue: #333745;
+$blue: #3c4251;
+$light-blue: #464b5e;
+$purple: #8357c5;
+
+
 // Spacing
 $font-size-large: 1.8rem;
 $font-size-medium: 1.6rem;
