--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -21,3 +21,18 @@
 .button--secondary {
   background: #888888;
 }
+
+
+.button_manual {
+  background-color: $dark-blue;
+  border: none;
+  color: white;
+  display: 'inline-block';
+  font-size: $font-size-medium;
+  font-weight: 300;
+  line-height: .5;
+  padding: $s-size;
+  text-decoration: none;
+  margin-bottom: $s-size;
+
+}
