--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -15,3 +15,12 @@
   @extend .text-input;
   height: 10rem;
 }
+
+.login-input {
+  border: 1px solid #cacccd;
+  height: 15px;
+  font-size: $font-size-medium;
+  font-weight: 300;
+  padding: $s-size;
+  margin-bottom: $m-size;
+}
