add tenant info

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,7 +3,9 @@ $dark-grey: #333333;
 $grey: #666;
 $blue: #1c88bf;
 $dark-blue: #364051;
+$light-blue: #0000FF;
 $off-white: #f7f7f7;
+$red: #D35400;
 
 $off-black: #20222b;
 $dark-blue: #333745;
