--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -36,3 +36,17 @@
   margin-bottom: $s-size;
 
 }
+
+
+.button-tenant {
+  background-color: $light-blue;
+  border: none;
+  color: white;
+  display: 'inline-block';
+  font-size: $font-size-medium;
+  font-weight: 300;
+  line-height: .5;
+  padding: $s-size;
+  text-decoration: none;
+  margin-bottom: $s-size;
+}
