--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -16,6 +16,11 @@
   height: 10rem;
 }
 
+.textarea_large {
+  @extend .text-input;
+  height: 20rem;
+}
+
 .login-input {
   border: 1px solid #cacccd;
   height: 15px;
